package ArkhitekturaPO.Seminars.Seminar08.MVI.model;

/**
 * Интерфейс ViewState представляет состояние представления.
 * Это маркерный интерфейс для определения различных видов состояний.
 */
public interface ViewState {
}
